# open-data-product-municipalities

./: .gitignore  README.md  data-product-manifest.yml  data-transformation-02-silver.yml  data-transformation-03-gold.yml  dpds.yml  main.ipynb  main.py  odps.yml  pyproject.toml
data/03-gold/germany-municipalities-2026-03-csv/: germany-municipalities-2026-03-ags.csv  germany-municipalities-2026-03-ars.csv
data/03-gold/germany-municipalities-2026-03-parquet/: germany-municipalities-2026-03-ags.parquet  germany-municipalities-2026-03-ars.parquet
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
